SnpSift/trunk/src/main/java/ca/mcgill/mcb/pcingola/snpSift/antlr/VcfFilterParser.java
// $ANTLR 3.4 /Users/pablocingolani/Documents/workspace/SnpSift/antlr/VcfFilter.g 2012-12-17 11:22:21

package ca.mcgill.mcb.pcingola.snpSift.antlr;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class VcfFilterParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALPHANUM", "COMMENT_SL", "CONDITION", "DIGIT", "FLOAT", "FUNCTION_BOOL_GENOTYPE", "FUNCTION_BOOL_SET", "FUNCTION_ENTRY", "ID", "LETTER", "LITERAL_NUMBER", "LITERAL_STRING", "LOWER", "NEWLINE", "NUMBER", "OP_BINARY", "OP_UNARY", "STRING", "UPPER", "VAR_EFF_SUB", "VAR_FIELD", "VAR_GENOTYPE", "VAR_GENOTYPE_SUB", "VAR_GENOTYPE_SUB_ARRAY", "VAR_LOF_SUB", "VAR_NMD_SUB", "VAR_SUBFIELD", "WS", "'!'", "'!='", "'!~'", "'&'", "'('", "')'", "'*'", "'.'", "'<'", "'<='", "'='", "'=~'", "'>'", "'>='", "'?'", "'ALL'", "'ANY'", "'EFF'", "'GEN'", "'LOF'", "'NMD'", "'SET'", "'['", "']'", "'countHet'", "'countHom'", "'countRef'", "'countVariant'", "'exists'", "'in'", "'isHet'", "'isHom'", "'isRef'", "'isVariant'", "'na'", "'|'"
    };

    public static final int EOF=-1;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int ALPHANUM=4;
    public static final int COMMENT_SL=5;
    public static final int CONDITION=6;
    public static final int DIGIT=7;
    public static final int FLOAT=8;
    public static final int FUNCTION_BOOL_GENOTYPE=9;
    public static final int FUNCTION_BOOL_SET=10;
    public static final int FUNCTION_ENTRY=11;
    public static final int ID=12;
    public static final int LETTER=13;
    public static final int LITERAL_NUMBER=14;
    public static final int LITERAL_STRING=15;
    public static final int LOWER=16;
    public static final int NEWLINE=17;
    public static final int NUMBER=18;
    public static final int OP_BINARY=19;
    public static final int OP_UNARY=20;
    public static final int STRING=21;
    public static final int UPPER=22;
    public static final int VAR_EFF_SUB=23;
    public static final int VAR_FIELD=24;
    public static final int VAR_GENOTYPE=25;
    public static final int VAR_GENOTYPE_SUB=26;
    public static final int VAR_GENOTYPE_SUB_ARRAY=27;
    public static final int VAR_LOF_SUB=28;
    public static final int VAR_NMD_SUB=29;
    public static final int VAR_SUBFIELD=30;
    public static final int WS=31;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public VcfFilterParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public VcfFilterParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return VcfFilterParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/pablocingolani/Documents/workspace/SnpSift/antlr/VcfFilter.g"; }


    public static class main_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "main"
    // /Users/pablocingolani/Documents/workspace/SnpSift/antlr/VcfFilter.g:87:1: main : f= condition -> ^( CONDITION $f) ;
    public final VcfFilterParser.main_return main() throws RecognitionException {
        VcfFilterParser.main_return retval = new VcfFilterParser.main_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        VcfFilterParser.condition_return f =null;


        RewriteRuleSubtreeStream stream_condition=new RewriteRuleSubtreeStream(adaptor,"rule condition");
        try {
            // /Users/pablocingolani/Documents/workspace/SnpSift/antlr/VcfFilter.g:87:7: (f= condition -> ^( CONDITION $f) )
            // /Users/pablocingolani/Documents/workspace/SnpSift/antlr/VcfFilter.g:87:9: f= condition
            {
            pushFollow(FOLLOW_condition_in_main375);
            f=condition();

            state._fsp--;

            stream_condition.add(f.getTree());

            // AST REWRITE
            // elements: f
            // token labels: 
            // rule labels: f, retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_f=new RewriteRuleSubtreeStream(adaptor,"rule f",f!=null?f.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 87:21: -> ^( CONDITION $f)
            {
                // /Users/pablocingolani/Documents/workspace/SnpSift/antlr/VcfFilter.g:87:24: ^( CONDITION $f)
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(CONDITION, "CONDITION")
                , root_1);

                adaptor.addChild(root_1, stream_f.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "main"


    public static class condition_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "condition"
    // /Users/pablocingolani/Documents/workspace/SnpSift/antlr/VcfFilter.g:89:1: condition : subcondition ( boolOperator ^ subcondition )* ;
    public final VcfFilterParser.condition_return condition() throws RecognitionException {
        VcfFilterParser.condition_return retval = new VcfFilterParser.condition_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        VcfFilterParser.subcondition_return subcondition1 =null;

        VcfFilterParser.boolOperator_return boolOperator2 =null;

        VcfFilterParser.subcondition_return subcondition3 =null;



        try {
            // /Users/pablocingolani/Documents/workspace/SnpSift/antlr/VcfFilter.g:89:11: ( subcondition ( boolOperator ^ subcondition )* )
            // /Users/pablocingolani/Documents/workspace/SnpSift/antlr/VcfFilter.g:89:13: subcondition ( boolOperator ^ subcondition )*
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_subcondition_in_condition392);
            subcondition1=subcondition();

            state._fsp--;

            adaptor.addChild(root_0, subcondition1.getTree());

            // /Users/pablocingolani/Documents/workspace/SnpSift/antlr/VcfFilter.g:89:26: ( boolOperator ^ subcondition )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==35||LA1_0==67) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/pablocingolani/Documents/workspace/SnpSift/antlr/VcfFilter.g:89:27: boolOperator ^ subcondition
            	    {
            	    pushFollow(FOLLOW_boolOperator_in_condition395);
            	    boolOperator2=boolOperator();

            	    state._fsp--;

            	    root_0 = (Object)adaptor.becomeRoot(boolOperator2.getTree(), root_0);

            	    pushFollow(FOLLOW_subcondition_in_condition398);
            	    subcondition3=subcondition();

            	    state._fsp--;

            	    adaptor.addChild(root_0, subcondition3.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "condition"


    public static class subcondition_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "subcondition"
    // /Users/pablocingolani/Documents/workspace/SnpSift/antlr/VcfFilter.g:90:1: subcondition : ( '!' ^)? ( bare | paren ) ;
    public final VcfFilterParser.subcondition_return subcondition() throws RecognitionException {
        VcfFilterParser.subcondition_return retval = new VcfFilterParser.subcondition_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal4=null;
        VcfFilterParser.bare_return bare5 =null;

        VcfFilterParser.paren_return paren6 =null;


        Object char_literal4_tree=null;

        try {
            // /Users/pablocingolani/Documents/workspace/SnpSift/antlr/VcfFilter.g:90:14: ( ( '!' ^)? ( bare | paren ) )
            // /Users/pablocingolani/Documents/workspace/SnpSift/antlr/VcfFilter.g:90:16: ( '!' ^)? ( bare | paren )
            {
            root_0 = (Object)adaptor.nil();


            // /Users/pablocingolani/Documents/workspace/SnpSift/antlr/VcfFilter.g:90:16: ( '!' ^)?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==32) ) {
                switch ( input.LA(2) ) {
                    case 32:
                    case 36:
                    case 60:
                    case 62:
                    case 63:
                    case 64:
                    case 65:
                    case 66:
                        {
                        alt2=1;
                        }
                        break;
                    case ID:
                        {
                        int LA2_4 = input.LA(3);

                        if ( (LA2_4==54) ) {
                            int LA2_12 = input.LA(4);

                            if ( (LA2_12==FLOAT||LA2_12==38||(LA2_12 >= 46 && LA2_12 <= 48)) ) {
                                int LA2_18 = input.LA(5);

                                if ( (LA2_18==55) ) {
                                    int LA2_24 = input.LA(6);

                                    if ( ((LA2_24 >= 33 && LA2_24 <= 34)||(LA2_24 >= 40 && LA2_24 <= 45)||LA2_24==61) ) {
                                        alt2=1;
                                    }
                                }
                            }
                        }
                        else if ( ((LA2_4 >= 33 && LA2_4 <= 34)||(LA2_4 >= 40 && LA2_4 <= 45)||LA2_4==61) ) {
                            alt2=1;
                        }
                        }
                        break;
                    case 50:
                        {
                        int LA2_5 = input.LA(3);

                        if ( (LA2_5==54) ) {
                            int LA2_13 = input.LA(4);

                            if ( (LA2_13==FLOAT||LA2_13==38||(LA2_13 >= 46 && LA2_13 <= 48)) ) {
                                int LA2_19 = input.LA(5);

                                if ( (LA2_19==55) ) {
                                    int LA2_25 = input.LA(6);

                                    if ( (LA2_25==39) ) {
                                        int LA2_29 = input.LA(7);

                                        if ( (LA2_29==ID) ) {
                                            int LA2_33 = input.LA(8);

                                            if ( (LA2_33==54) ) {
                                                int LA2_37 = input.LA(9);

                                                if ( (LA2_37==FLOAT||LA2_37==38||(LA2_37 >= 46 && LA2_37 <= 48)) ) {
                                                    int LA2_38 = input.LA(10);

                                                    if ( (LA2_38==55) ) {
                                                        int LA2_39 = input.LA(11);

                                                        if ( ((LA2_39 >= 33 && LA2_39 <= 34)||(LA2_39 >= 40 && LA2_39 <= 45)||LA2_39==61) ) {
                                                            alt2=1;
                                                        }
                                                    }
                                                }
                                            }
                                            else if ( ((LA2_33 >= 33 && LA2_33 <= 34)||(LA2_33 >= 40 && LA2_33 <= 45)||LA2_33==61) ) {
                                                alt2=1;
                                            }
                                        }
                                    }
                                }
                            }
                        }
                        }
                        break;
                    case 49:
                        {
                        int LA2_6 = input.LA(3);

                        if ( (LA2_6==54) ) {
                            int LA2_14 = input.LA(4);

                            if ( (LA2_14==FLOAT||LA2_14==38||(LA2_14 >= 46 && LA2_14 <= 48)) ) {
                                int LA2_20 = input.LA(5);

                                if ( (LA2_20==55) ) {
                                    int LA2_26 = input.LA(6);

                                    if ( (LA2_26==39) ) {
                                        int LA2_30 = input.LA(7);

                                        if ( (LA2_30==ID) ) {
                                            int LA2_34 = input.LA(8);

                                            if ( ((LA2_34 >= 33 && LA2_34 <= 34)||(LA2_34 >= 40 && LA2_34 <= 45)||LA2_34==61) ) {
                                                alt2=1;
                                            }
                                        }
                                    }
                                }
                            }
                        }
                        }
                        break;
                    case 51:
                        {
                        int LA2_7 = input.LA(3);

                        if ( (LA2_7==54) ) {
                            int LA2_15 = input.LA(4);

                            if ( (LA2_15==FLOAT||LA2_15==38||(LA2_15 >= 46 && LA2_15 <= 48)) ) {
                                int LA2_21 = input.LA(5);

                                if ( (LA2_21==55) ) {
                                    int LA2_27 = input.LA(6);

                                    if ( (LA2_27==39) ) {
                                        int LA2_31 = input.LA(7);

                                        if ( (LA2_31==ID) ) {
                                            int LA2_35 = input.LA(8);

                                            if ( ((LA2_35 >= 33 && LA2_35 <= 34)||(LA2_35 >= 40 && LA2_35 <= 45)||LA2_35==61) ) {
                                                alt2=1;
                                            }
                                        }
                                    }
                                }
                            }
                        }
                        }
                        break;
                    case 52:
                        {
                        int LA2_8 = input.LA(3);

                        if ( (LA2_8==54) ) {
                            int LA2_16 = input.LA(4);

                            if ( (LA2_16==FLOAT||LA2_16==38||(LA2_16 >= 46 && LA2_16 <= 48)) ) {
                                int LA2_22 = input.LA(5);

                                if ( (LA2_22==55) ) {
                                    int LA2_28 = input.LA(6);

                                    if ( (LA2_28==39) ) {
                                        int LA2_32 = input.LA(7);

                                        if ( (LA2_32==ID) ) {
                                            int LA2_36 = input.LA(8);

                                            if ( ((LA2_36 >= 33 && LA2_36 <= 34)||(LA2_36 >= 40 && LA2_36 <= 45)||LA2_36==61) ) {
                                                alt2=1;
                                            }
                                        }
                                    }
                                }
                            }
                        }
                        }
                        break;
                    case 56:
                    case 57:
                    case 58:
                    case 59:
                        {
                        int LA2_9 = input.LA(3);

                        if ( (LA2_9==36) ) {
                            int LA2_17 = input.LA(4);

                            if ( (LA2_17==37) ) {
                                int LA2_23 = input.LA(5);

                                if ( ((LA2_23 >= 33 && LA2_23 <= 34)||(LA2_23 >= 40 && LA2_23 <= 45)||LA2_23==61) ) {
                                    alt2=1;
                                }
                            }
                        }
                        }
                        break;
                    case FLOAT:
                        {
                        int LA2_10 = input.LA(3);

                        if ( ((LA2_10 >= 33 && LA2_10 <= 34)||(LA2_10 >= 40 && LA2_10 <= 45)||LA2_10==61) ) {
                            alt2=1;
                        }
                        }
                        break;
                    case STRING:
                        {
                        int LA2_11 = input.LA(3);

                        if ( ((LA2_11 >= 33 && LA2_11 <= 34)||(LA2_11 >= 40 && LA2_11 <= 45)||LA2_11==61) ) {
                            alt2=1;
                        }
                        }
                        break;
                }

            }
            switch (alt2) {
                case 1 :
                    // /Users/pablocingolani/Documents/workspace/SnpSift/antlr/VcfFilter.g:90:17: '!' ^
                    {
                    char_literal4=(Token)match(input,32,FOLLOW_32_in_subcondition408); 
                    char_literal4_tree = 
                    (Object)adaptor.create(char_literal4)
                    ;
                    root_0 = (Object)adaptor.becomeRoot(char_literal4_tree, root_0);


                    }
                    break;

            }


            // /Users/pablocingolani/Documents/workspace/SnpSift/antlr/VcfFilter.g:90:24: ( bare | paren )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==FLOAT||LA3_0==ID||LA3_0==STRING||LA3_0==32||(LA3_0 >= 49 && LA3_0 <= 52)||(LA3_0 >= 56 && LA3_0 <= 60)||(LA3_0 >= 62 && LA3_0 <= 66)) ) {
                alt3=1;
            }
            else if ( (LA3_0==36) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // /Users/pablocingolani/Documents/workspace/SnpSift/antlr/VcfFilter.g:90:25: bare
                    {
                    pushFollow(FOLLOW_bare_in_subcondition414);
                    bare5=bare();

                    state._fsp--;

                    adaptor.addChild(root_0, bare5.getTree());

                    }
                    break;
                case 2 :
                    // /Users/pablocingolani/Documents/workspace/SnpSift/antlr/VcfFilter.g:90:32: paren
                    {
                    pushFollow(FOLLOW_paren_in_subcondition418);
                    paren6=paren();

                    state._fsp--;

                    adaptor.addChild(root_0, paren6.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "subcondition"


    public static class bare_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "bare"
    // /Users/pablocingolani/Documents/workspace/SnpSift/antlr/VcfFilter.g:91:1: bare : ( unaryExpr | binaryExpr | functionBoolean );
    public final VcfFilterParser.bare_return bare() throws RecognitionException {
        VcfFilterParser.bare_return retval = new VcfFilterParser.bare_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        VcfFilterParser.unaryExpr_return unaryExpr7 =null;

        VcfFilterParser.binaryExpr_return binaryExpr8 =null;

        VcfFilterParser.functionBoolean_return functionBoolean9 =null;



        try {
            // /Users/pablocingolani/Documents/workspace/SnpSift/antlr/VcfFilter.g:91:7: ( unaryExpr | binaryExpr | functionBoolean )
            int alt4=3;
            switch ( input.LA(1) ) {
            case 32:
            case 60:
            case 66:
                {
                alt4=1;
                }
                break;
            case ID:
                {
                switch ( input.LA(2) ) {
                case 54:
                    {
                    int LA4_11 = input.LA(3);

                    if ( (LA4_11==FLOAT||LA4_11==38||(LA4_11 >= 46 && LA4_11 <= 48)) ) {
                        int LA4_18 = input.LA(4);

                        if ( (LA4_18==55) ) {
                            int LA4_24 = input.LA(5);

                            if ( ((LA4_24 >= 33 && LA4_24 <= 34)||(LA4_24 >= 40 && LA4_24 <= 45)) ) {
                                alt4=2;
                            }
                            else if ( (LA4_24==61) ) {
                                alt4=3;
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 4, 24, input);

                                throw nvae;

                            }
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 4, 18, input);

                            throw nvae;

                        }
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 4, 11, input);

                        throw nvae;

                    }
                    }
                    break;
                case 33:
                case 34:
                case 40:
                case 41:
                case 42:
                case 43:
                case 44:
                case 45:
                    {
                    alt4=2;
                    }
                    break;
                case 61:
                    {
                    alt4=3;
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 2, input);

                    throw nvae;

                }

                }
                break;
            case 50:
                {
                int LA4_3 = input.LA(2);

                if ( (LA4_3==54) ) {
                    int LA4_13 = input.LA(3);

                    if ( (LA4_13==FLOAT||LA4_13==38||(LA4_13 >= 46 && LA4_13 <= 48)) ) {
                        int LA4_19 = input.LA(4);

                        if ( (LA4_19==55) ) {
                            int LA4_25 = input.LA(5);

                            if ( (LA4_25==39) ) {
                                int LA4_29 = input.LA(6);

                                if ( (LA4_29==ID) ) {
                                    switch ( input.LA(7) ) {
                                    case 54:
                                        {
                                        int LA4_37 = input.LA(8);

                                        if ( (LA4_37==FLOAT||LA4_37==38||(LA4_37 >= 46 && LA4_37 <= 48)) ) {
                                            int LA4_38 = input.LA(9);

                                            if ( (LA4_38==55) ) {
                                                int LA4_39 = input.LA(10);

                                                if ( ((LA4_39 >= 33 && LA4_39 <= 34)||(LA4_39 >= 40 && LA4_39 <= 45)) ) {
                                                    alt4=2;
                                                }
                                                else if ( (LA4_39==61) ) {
                                                    alt4=3;
                                                }
                                                else {
                                                    NoViableAltException nvae =
                                                        new NoViableAltException("", 4, 39, input);

                                                    throw nvae;

                                                }
                                            }
                                            else {
                                                NoViableAltException nvae =
                                                    new NoViableAltException("", 4, 38, input);

                                                throw nvae;

                                            }
                                        }
                                        else {
                                            NoViableAltException nvae =
                                                new NoViableAltException("", 4, 37, input);

                                            throw nvae;

                                        }
                                        }
                                        break;
                                    case 33:
                                    case 34:
                                    case 40:
                                    case 41:
                                    case 42:
                                    case 43:
                                    case 44:
                                    case 45:
                                        {
                                        alt4=2;
                                        }
                                        break;
                                    case 61:
                                        {
                                        alt4=3;
                                        }
                                        break;
                                    default:
                                        NoViableAltException nvae =
                                            new NoViableAltException("", 4, 33, input);

                                        throw nvae;

                                    }

                                }
                                else {
                                    NoViableAltException nvae =
                                        new NoViableAltException("", 4, 29, input);

                                    throw nvae;

                                }
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 4, 25, input);

                                throw nvae;

                            }
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 4, 19, input);

                            throw nvae;

                        }
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 4, 13, input);

                        throw nvae;

                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 3, input);

                    throw nvae;

                }
                }
                break;
            case 49:
                {
                int LA4_4 = input.LA(2);

                if ( (LA4_4==54) ) {
                    int LA4_14 = input.LA(3);

                    if ( (LA4_14==FLOAT||LA4_14==38||(LA4_14 >= 46 && LA4_14 <= 48)) ) {
                        int LA4_20 = input.LA(4);

                        if ( (LA4_20==55) ) {
                            int LA4_26 = input.LA(5);

                            if ( (LA4_26==39) ) {
                                int LA4_30 = input.LA(6);

                                if ( (LA4_30==ID) ) {
                                    int LA4_34 = input.LA(7);

                                    if ( ((LA4_34 >= 33 && LA4_34 <= 34)||(LA4_34 >= 40 && LA4_34 <= 45)) ) {
                                        alt4=2;
                                    }
                                    else if ( (LA4_34==61) ) {
                                        alt4=3;
                                    }
                                    else {
                                        NoViableAltException nvae =
                                            new NoViableAltException("", 4, 34, input);

                                        throw nvae;

                                    }
                                }
                                else {
                                    NoViableAltException nvae =
                                        new NoViableAltException("", 4, 30, input);

                                    throw nvae;

                                }
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 4, 26, input);

                                throw nvae;

                            }
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 4, 20, input);

                            throw nvae;

                        }
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 4, 14, input);

                        throw nvae;

                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 4, input);

                    throw nvae;

                }
                }
                break;
            case 51:
                {
                int LA4_5 = input.LA(2);

                if ( (LA4_5==54) ) {
                    int LA4_15 = input.LA(3);

                    if ( (LA4_15==FLOAT||LA4_15==38||(LA4_15 >= 46 && LA4_15 <= 48)) ) {
                        int LA4_21 = input.LA(4);

                        if ( (LA4_21==55) ) {
                            int LA4_27 = input.LA(5);

                            if ( (LA4_27==39) ) {
                                int LA4_31 = input.LA(6);

                                if ( (LA4_31==ID) ) {
                                    int LA4_35 = input.LA(7);

                                    if ( ((LA4_35 >= 33 && LA4_35 <= 34)||(LA4_35 >= 40 && LA4_35 <= 45)) ) {
                                        alt4=2;
                                    }
                                    else if ( (LA4_35==61) ) {
                                        alt4=3;
                                    }
                                    else {
                                        NoViableAltException nvae =
                                            new NoViableAltException("", 4, 35, input);

                                        throw nvae;

                                    }
                                }
                                else {
                                    NoViableAltException nvae =
                                        new NoViableAltException("", 4, 31, input);

                                    throw nvae;

                                }
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 4, 27, input);

                                throw nvae;

                            }
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 4, 21, input);

                            throw nvae;

                        }
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 4, 15, input);

                        throw nvae;

                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 5, input);

                    throw nvae;

                }
                }
                break;
            case 52:
                {
                int LA4_6 = input.LA(2);

                if ( (LA4_6==54) ) {
                    int LA4_16 = input.LA(3);

                    if ( (LA4_16==FLOAT||LA4_16==38||(LA4_16 >= 46 && LA4_16 <= 48)) ) {
                        int LA4_22 = input.LA(4);

                        if ( (LA4_22==55) ) {
                            int LA4_28 = input.LA(5);

                            if ( (LA4_28==39) ) {
                                int LA4_32 = input.LA(6);

                                if ( (LA4_32==ID) ) {
                                    int LA4_36 = input.LA(7);
